--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<script src="path/to/script.js"></script>
+<script src="https://cdn.emailjs.com/dist/email.min.js"></script>
 </head>
 <body>
 
