--- a/index.html
+++ b/index.html
@@ -1,165 +1,240 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Degree Control</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<script src="script.js"></script>
-<script src="https://cdn.emailjs.com/dist/email.min.js"></script>
-</head>
-<body>
-
-<!-- Navbar (sit on top) -->
-<div class="w3-top">
-  <div class="w3-bar w3-white w3-wide w3-padding w3-card">
-    <a href="#home" class="w3-bar-item w3-button"><b>DCM</b> Degree Control Mechanical</a>
-    <!-- Float links to the right. Hide them on small screens -->
-    <div class="w3-right w3-hide-small">
-      <a href="#projects" class="w3-bar-item w3-button">Projects</a>
-      <a href="#about" class="w3-bar-item w3-button">About</a>
-      <a href="#contact" class="w3-bar-item w3-button">Contact</a>
-    </div>
-  </div>
-</div>
-
-<!-- Header -->
-<header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
-  <img class="w3-image" src="placeholder.jpg" alt="Architecture" width="1500" height="800">
-  <div class="w3-display-middle w3-margin-top w3-center">
-    <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>DCM</b></span> <span class="w3-hide-small w3-text-light-grey">Degree Control Mechanical</span></h1>
-  </div>
-</header>
-
-<!-- Page content -->
-<div class="w3-content w3-padding" style="max-width:1564px">
-
-  <!-- Project Section -->
-  <div class="w3-container w3-padding-32" id="projects">
-    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Projects</h3>
-  </div>
-
-  <div class="w3-row-padding">
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Job 1</div>
-        <img src="placeholder.jpg" alt="House" style="width:100%">
+  <head>
+    <title>Degree Control</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
+    <script src="script.js"></script>
+    <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"
+    ></script>
+    <script type="text/javascript">
+      emailjs.init("XvV4_oouCJVhlC4PG");
+    </script>
+  </head>
+  <body>
+    <!-- Navbar (sit on top) -->
+    <div class="w3-top">
+      <div class="w3-bar w3-white w3-wide w3-padding w3-card">
+        <a href="#home" class="w3-bar-item w3-button"
+          ><b>DCM</b> Degree Control Mechanical</a
+        >
+        <!-- Float links to the right. Hide them on small screens -->
+        <div class="w3-right w3-hide-small">
+          <a href="#projects" class="w3-bar-item w3-button">Projects</a>
+          <a href="#about" class="w3-bar-item w3-button">About</a>
+          <a href="#contact" class="w3-bar-item w3-button">Contact</a>
+        </div>
       </div>
     </div>
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Job 2</div>
-        <img src="placeholder.jpg" alt="House" style="width:100%">
+
+    <!-- Header -->
+    <header
+      class="w3-display-container w3-content w3-wide"
+      style="max-width: 1500px"
+      id="home"
+    >
+      <img
+        class="w3-image"
+        src="placeholder.jpg"
+        alt="Architecture"
+        width="1500"
+        height="800"
+      />
+      <div class="w3-display-middle w3-margin-top w3-center">
+        <h1 class="w3-xxlarge w3-text-white">
+          <span class="w3-padding w3-black w3-opacity-min"><b>DCM</b></span>
+          <span class="w3-hide-small w3-text-light-grey"
+            >Degree Control Mechanical</span
+          >
+        </h1>
       </div>
-    </div>
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Job 3</div>
-        <img src="placeholder.jpg" alt="House" style="width:100%">
+    </header>
+
+    <!-- Page content -->
+    <div class="w3-content w3-padding" style="max-width: 1564px">
+      <!-- Project Section -->
+      <div class="w3-container w3-padding-32" id="projects">
+        <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">
+          Projects
+        </h3>
       </div>
-    </div>
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Job 4</div>
-        <img src="placeholder.jpg" alt="House" style="width:100%">
+
+      <div class="w3-row-padding">
+        <div class="w3-col l3 m6 w3-margin-bottom">
+          <div class="w3-display-container">
+            <div class="w3-display-topleft w3-black w3-padding">Job 1</div>
+            <img src="placeholder.jpg" alt="House" style="width: 100%" />
+          </div>
+        </div>
+        <div class="w3-col l3 m6 w3-margin-bottom">
+          <div class="w3-display-container">
+            <div class="w3-display-topleft w3-black w3-padding">Job 2</div>
+            <img src="placeholder.jpg" alt="House" style="width: 100%" />
+          </div>
+        </div>
+        <div class="w3-col l3 m6 w3-margin-bottom">
+          <div class="w3-display-container">
+            <div class="w3-display-topleft w3-black w3-padding">Job 3</div>
+            <img src="placeholder.jpg" alt="House" style="width: 100%" />
+          </div>
+        </div>
+        <div class="w3-col l3 m6 w3-margin-bottom">
+          <div class="w3-display-container">
+            <div class="w3-display-topleft w3-black w3-padding">Job 4</div>
+            <img src="placeholder.jpg" alt="House" style="width: 100%" />
+          </div>
+        </div>
       </div>
-    </div>
-  </div>
 
-  <div class="w3-row-padding">
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Job 5</div>
-        <img src="placeholder.jpg" alt="House" style="width:99%">
+      <div class="w3-row-padding">
+        <div class="w3-col l3 m6 w3-margin-bottom">
+          <div class="w3-display-container">
+            <div class="w3-display-topleft w3-black w3-padding">Job 5</div>
+            <img src="placeholder.jpg" alt="House" style="width: 99%" />
+          </div>
+        </div>
+        <div class="w3-col l3 m6 w3-margin-bottom">
+          <div class="w3-display-container">
+            <div class="w3-display-topleft w3-black w3-padding">Job 6</div>
+            <img src="placeholder.jpg" alt="House" style="width: 99%" />
+          </div>
+        </div>
+        <div class="w3-col l3 m6 w3-margin-bottom">
+          <div class="w3-display-container">
+            <div class="w3-display-topleft w3-black w3-padding">Job 7</div>
+            <img src="placeholder.jpg" alt="House" style="width: 99%" />
+          </div>
+        </div>
+        <div class="w3-col l3 m6 w3-margin-bottom">
+          <div class="w3-display-container">
+            <div class="w3-display-topleft w3-black w3-padding">Job 8</div>
+            <img src="placeholder.jpg" alt="House" style="width: 99%" />
+          </div>
+        </div>
       </div>
-    </div>
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Job 6</div>
-        <img src="placeholder.jpg" alt="House" style="width:99%">
+
+      <!-- About Section -->
+      <div class="w3-container w3-padding-32" id="about">
+        <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">
+          About
+        </h3>
+        <p>
+          Degree Control Mechanical Ltd. is a HVAC-R company. Provide
+          installation and repairing services.
+        </p>
       </div>
-    </div>
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Job 7</div>
-        <img src="placeholder.jpg" alt="House" style="width:99%">
+
+      <div class="w3-row-padding w3-grayscale">
+        <div class="w3-col l3 m6 w3-margin-bottom">
+          <img src="placeholder.jpg" alt="John" style="width: 100%" />
+          <h3>Sukhchain New Mechanic</h3>
+          <p class="w3-opacity">Owner</p>
+          <p></p>
+          <p>
+            <button class="w3-button w3-light-grey w3-block">Contact</button>
+          </p>
+        </div>
+        <div class="w3-col l3 m6 w3-margin-bottom">
+          <img src="placeholder.jpg" alt="Jane" style="width: 100%" />
+          <h3>Sukhchain New Mechanic</h3>
+          <p class="w3-opacity">Owner</p>
+          <p></p>
+          <p>
+            <button class="w3-button w3-light-grey w3-block">Contact</button>
+          </p>
+        </div>
+        <div class="w3-col l3 m6 w3-margin-bottom">
+          <img src="placeholder.jpg" alt="Mike" style="width: 100%" />
+          <h3>Sukhchain New Mechanic</h3>
+          <p class="w3-opacity">Owner</p>
+          <p></p>
+          <p>
+            <button class="w3-button w3-light-grey w3-block">Contact</button>
+          </p>
+        </div>
+        <div class="w3-col l3 m6 w3-margin-bottom">
+          <img src="placeholder.jpg" alt="Dan" style="width: 100%" />
+          <h3>Sukhchain New Mechanic</h3>
+          <p class="w3-opacity">Owner</p>
+          <p></p>
+          <p>
+            <button class="w3-button w3-light-grey w3-block">Contact</button>
+          </p>
+        </div>
       </div>
-    </div>
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Job 8</div>
-        <img src="placeholder.jpg" alt="House" style="width:99%">
+
+      <!-- Contact Section -->
+      <div class="w3-container w3-padding-32" id="contact">
+        <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">
+          Contact
+        </h3>
+        <p>Let's get in touch and talk about your next project.</p>
+        <form id="contact_form">
+          <input
+            class="w3-input w3-border"
+            type="text"
+            placeholder="Name"
+            required
+            name="from_name"
+            id="from_name"
+          />
+          <input
+            class="w3-input w3-section w3-border"
+            type="text"
+            placeholder="Email"
+            required
+            name="from_email"
+            id="from_email"
+          />
+          <input
+            class="w3-input w3-section w3-border"
+            type="text"
+            placeholder="Subject"
+            required
+            name="subject"
+            id="subject"
+          />
+          <input
+            class="w3-input w3-section w3-border"
+            type="text"
+            placeholder="Message"
+            required
+            name="message"
+            id="message"
+          />
+          <input
+            id="contact_form_button"
+            class="w3-button w3-black w3-section"
+            type="submit"
+            value="SEND MESSAGE"
+          />
+        </form>
+        <div id="send_message"></div>
       </div>
+
+      <!-- Image of location/map -->
+      <div class="w3-container">
+        <img src="placeholder.jpg" class="w3-image" style="width: 100%" />
+      </div>
+
+      <!-- End page content -->
     </div>
-  </div>
 
-  <!-- About Section -->
-  <div class="w3-container w3-padding-32" id="about">
-    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">About</h3>
-    <p>Degree Control Mechanical Ltd. is a HVAC-R company. Provide installation and repairing services.
-    </p>
-  </div>
-
-  <div class="w3-row-padding w3-grayscale">
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <img src="placeholder.jpg" alt="John" style="width:100%">
-      <h3>Sukhchain New Mechanic</h3>
-      <p class="w3-opacity">Owner</p>
-      <p></p>
-      <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
-    </div>
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <img src="placeholder.jpg" alt="Jane" style="width:100%">
-      <h3>Sukhchain New Mechanic</h3>
-      <p class="w3-opacity">Owner</p>
-      <p></p>
-      <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
-    </div>
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <img src="placeholder.jpg" alt="Mike" style="width:100%">
-      <h3>Sukhchain New Mechanic</h3>
-      <p class="w3-opacity">Owner</p>
-      <p></p>
-      <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
-    </div>
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <img src="placeholder.jpg" alt="Dan" style="width:100%">
-      <h3>Sukhchain New Mechanic</h3>
-      <p class="w3-opacity">Owner</p>
-      <p></p>
-      <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
-    </div>
-  </div>
-
-  <!-- Contact Section -->
-  <div class="w3-container w3-padding-32" id="contact">
-    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Contact</h3>
-    <p>Let's get in touch and talk about your next project.</p>
-    <form id="contact-form">
-      <input class="w3-input w3-border" type="text" placeholder="Name" required name="Name">
-      <input class="w3-input w3-section w3-border" type="text" placeholder="Email" required name="Email">
-      <input class="w3-input w3-section w3-border" type="text" placeholder="Subject" required name="Subject">
-      <input class="w3-input w3-section w3-border" type="text" placeholder="Comment" required name="Comment">
-      <button class="w3-button w3-black w3-section" type="submit">
-        <i class="fa fa-paper-plane"></i> SEND MESSAGE
-      </button>
-    </form>
-  </div>
-
-  
-<!-- Image of location/map -->
-<div class="w3-container">
-  <img src="placeholder.jpg" class="w3-image" style="width:100%">
-</div>
-
-<!-- End page content -->
-</div>
-
-
-<!-- Footer -->
-<footer class="w3-center w3-black w3-padding-16">
-  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
-</footer>
-
-</body>
+    <!-- Footer -->
+    <footer class="w3-center w3-black w3-padding-16">
+      <p>
+        Powered by
+        <a
+          href="https://www.w3schools.com/w3css/default.asp"
+          title="W3.CSS"
+          target="_blank"
+          class="w3-hover-text-green"
+          >w3.css</a
+        >
+      </p>
+    </footer>
+  </body>
 </html>
