--- a/index.html
+++ b/index.html
@@ -216,7 +216,17 @@
     </div>
 
     <!-- Footer -->
-    <footer class="w3-center w3-black w3-padding-16">
+    <!-- Footer -->
+<footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
+  <i class="fa fa-facebook-official w3-hover-opacity"></i>
+  <i class="fa fa-instagram w3-hover-opacity"></i>
+  <i class="fa fa-snapchat w3-hover-opacity"></i>
+  <i class="fa fa-pinterest-p w3-hover-opacity"></i>
+  <i class="fa fa-twitter w3-hover-opacity"></i>
+  <i class="fa fa-linkedin w3-hover-opacity"></i>
+  <p class="w3-medium">Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+</footer>
+<!--     <footer class="w3-center w3-black w3-padding-16">
       <p>
         Powered by
         <a
@@ -227,7 +237,7 @@
           >w3.css</a
         >
       </p>
-    </footer>
+    </footer> -->
   </body>
 
   <script src="script.js"></script>
