--- a/index.html
+++ b/index.html
@@ -220,10 +220,10 @@
 
     <!-- Footer -->
     <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
-      <i class="fa-brands fa-facebook w3-hover-opacity"><a href="https://www.facebook.com/" target="_blank"></i>
-      <i class="fa-brands fa-instagram w3-hover-opacity"><a href="https://www.instagram.com/" target="_blank"></i>
-      <i class="fa-brands fa-linkedin-in w3-hover-opacity"><a href="https://ca.linkedin.com/" target="_blank"></i>
-      <i class="fa-brands fa-x-twitter w3-hover-opacity"><a href="https://x.com/x" target="_blank"></i>
+      <i class="fa-brands fa-facebook w3-hover-opacity"><a href="https://www.facebook.com/" target="_blank" /></i>
+      <i class="fa-brands fa-instagram w3-hover-opacity"><a href="https://www.instagram.com/" target="_blank" /></i>
+      <i class="fa-brands fa-linkedin-in w3-hover-opacity"><a href="https://ca.linkedin.com/" target="_blank" /></i>
+      <i class="fa-brands fa-x-twitter w3-hover-opacity"><a href="https://x.com/x" target="_blank" /></i>
       <p class="w3-medium">Disclaimer: ...</p>
     </footer>
   </body>
