--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://kit.fontawesome.com/1c00bd2934.js" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
   </head>
   <body>
     <!-- Navbar (sit on top) -->
@@ -228,7 +229,7 @@
     </footer>
   </body>
 
-  <script src="script.js"></script>
+  <script src="webform.js"></script>
   <script
     type="text/javascript"
     src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"
