--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         >
         <!-- Float links to the right. Hide them on small screens -->
         <div class="w3-right w3-hide-small">
-          <button onclick="scrolltofunc('projects')">Projects</button>
+          <button class="w3-bar-item w3-button" onclick="scrolltofunc('projects')">Projects</button>
           <a href="#about" class="w3-bar-item w3-button">About</a>
           <a href="#contact" class="w3-bar-item w3-button">Contact</a>
         </div>
