--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <!-- Float links to the right. Hide them on small screens -->
         <div class="w3-right w3-hide-small">
           <button class="w3-bar-item w3-button" onclick="scrolltofunc('projects')">Projects</button>
-          <a href="#about" class="w3-bar-item w3-button">About</a>
-          <a href="#contact" class="w3-bar-item w3-button">Contact</a>
+          <button class="w3-bar-item w3-button" onclick="scrolltofunc('about')">About</button>
+          <button class="w3-bar-item w3-button" onclick="scrolltofunc('contact')">Contact</button>
         </div>
       </div>
     </div>
@@ -115,7 +115,8 @@
       </section>
 
       <!-- About Section -->
-      <div class="w3-container w3-padding-32" id="about">
+      <section id="about" name="about">
+      <div class="w3-container w3-padding-32">
         <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">
           About
         </h3>
@@ -163,8 +164,10 @@
           </p>
         </div>
       </div>
+      </section>
 
       <!-- Contact Section -->
+      <section id="contact" name="contact">
       <div class="w3-container w3-padding-32" id="contact">
         <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">
           Contact
@@ -212,6 +215,7 @@
         </form>
         <div id="send_message"></div>
       </div>
+      </section>
 
       <!-- Image of location/map -->
       <div class="w3-container">
