Update for test

--- a/index.html
+++ b/index.html
@@ -5,9 +5,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="https://kit.fontawesome.com/1c00bd2934.js" crossorigin="anonymous"></script>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Lato"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <script
+      src="https://kit.fontawesome.com/1c00bd2934.js"
+      crossorigin="anonymous"
+    ></script>
     <script src="script.js"></script>
   </head>
   <body>
@@ -19,9 +28,27 @@
         >
         <!-- Float links to the right. Hide them on small screens -->
         <div class="w3-right w3-hide-small">
-          <button class="w3-bar-item w3-button" onclick="scrolltofunc('projects')">Projects</button>
-          <button class="w3-bar-item w3-button" onclick="scrolltofunc('about')">About</button>
-          <button class="w3-bar-item w3-button" onclick="scrolltofunc('contact')">Contact</button>
+          <button
+            class="w3-bar-item w3-button"
+            onclick="scrolltofunc('projects')"
+          >
+            Projects
+          </button>
+          <button
+            class="w3-bar-item w3-button"
+            onclick="scrolltofunc('brands')"
+          >
+            Brands
+          </button>
+          <button class="w3-bar-item w3-button" onclick="scrolltofunc('about')">
+            About
+          </button>
+          <button class="w3-bar-item w3-button" onclick="scrolltofunc('form')">
+            Contact
+          </button>
+          <button class="w3-bar-item w3-button" onclick="scrolltofunc('form')">
+            Request
+          </button>
         </div>
       </div>
     </div>
@@ -53,168 +80,216 @@
     <div class="w3-content w3-padding" style="max-width: 1564px">
       <!-- Project Section -->
       <section id="projects" name="projects">
-      <div class="w3-container w3-padding-32">
-        <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">
-          Projects
-        </h3>
-      </div>
+        <div class="w3-container w3-padding-32">
+          <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">
+            Projects
+          </h3>
+        </div>
 
-      <div class="w3-row-padding">
-        <div class="w3-col l3 m6 w3-margin-bottom">
-          <div class="w3-display-container">
-            <div class="w3-display-topleft w3-black w3-padding">Job 1</div>
-            <img src="placeholder.jpg" alt="House" style="width: 100%" />
+        <div class="w3-row-padding">
+          <div class="w3-col l3 m6 w3-margin-bottom">
+            <div class="w3-display-container">
+              <div class="w3-display-topleft w3-black w3-padding">Job 1</div>
+              <img src="placeholder.jpg" alt="House" style="width: 100%" />
+            </div>
+          </div>
+          <div class="w3-col l3 m6 w3-margin-bottom">
+            <div class="w3-display-container">
+              <div class="w3-display-topleft w3-black w3-padding">Job 2</div>
+              <img src="placeholder.jpg" alt="House" style="width: 100%" />
+            </div>
+          </div>
+          <div class="w3-col l3 m6 w3-margin-bottom">
+            <div class="w3-display-container">
+              <div class="w3-display-topleft w3-black w3-padding">Job 3</div>
+              <img src="placeholder.jpg" alt="House" style="width: 100%" />
+            </div>
+          </div>
+          <div class="w3-col l3 m6 w3-margin-bottom">
+            <div class="w3-display-container">
+              <div class="w3-display-topleft w3-black w3-padding">Job 4</div>
+              <img src="placeholder.jpg" alt="House" style="width: 100%" />
+            </div>
           </div>
         </div>
-        <div class="w3-col l3 m6 w3-margin-bottom">
-          <div class="w3-display-container">
-            <div class="w3-display-topleft w3-black w3-padding">Job 2</div>
-            <img src="placeholder.jpg" alt="House" style="width: 100%" />
-          </div>
-        </div>
-        <div class="w3-col l3 m6 w3-margin-bottom">
-          <div class="w3-display-container">
-            <div class="w3-display-topleft w3-black w3-padding">Job 3</div>
-            <img src="placeholder.jpg" alt="House" style="width: 100%" />
-          </div>
-        </div>
-        <div class="w3-col l3 m6 w3-margin-bottom">
-          <div class="w3-display-container">
-            <div class="w3-display-topleft w3-black w3-padding">Job 4</div>
-            <img src="placeholder.jpg" alt="House" style="width: 100%" />
-          </div>
-        </div>
-      </div>
 
-      <div class="w3-row-padding">
-        <div class="w3-col l3 m6 w3-margin-bottom">
-          <div class="w3-display-container">
-            <div class="w3-display-topleft w3-black w3-padding">Job 5</div>
-            <img src="placeholder.jpg" alt="House" style="width: 99%" />
+        <div class="w3-row-padding">
+          <div class="w3-col l3 m6 w3-margin-bottom">
+            <div class="w3-display-container">
+              <div class="w3-display-topleft w3-black w3-padding">Job 5</div>
+              <img src="placeholder.jpg" alt="House" style="width: 99%" />
+            </div>
+          </div>
+          <div class="w3-col l3 m6 w3-margin-bottom">
+            <div class="w3-display-container">
+              <div class="w3-display-topleft w3-black w3-padding">Job 6</div>
+              <img src="placeholder.jpg" alt="House" style="width: 99%" />
+            </div>
+          </div>
+          <div class="w3-col l3 m6 w3-margin-bottom">
+            <div class="w3-display-container">
+              <div class="w3-display-topleft w3-black w3-padding">Job 7</div>
+              <img src="placeholder.jpg" alt="House" style="width: 99%" />
+            </div>
+          </div>
+          <div class="w3-col l3 m6 w3-margin-bottom">
+            <div class="w3-display-container">
+              <div class="w3-display-topleft w3-black w3-padding">Job 8</div>
+              <img src="placeholder.jpg" alt="House" style="width: 99%" />
+            </div>
           </div>
         </div>
-        <div class="w3-col l3 m6 w3-margin-bottom">
-          <div class="w3-display-container">
-            <div class="w3-display-topleft w3-black w3-padding">Job 6</div>
-            <img src="placeholder.jpg" alt="House" style="width: 99%" />
+      </section>
+
+      <!-- Brands Section -->
+      <section id="brands" name="brands">
+        <div class="w3-container w3-padding-32">
+          <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">
+            Brands
+          </h3>
+        </div>
+
+        <div class="w3-row-padding">
+          <div class="w3-col l3 m6 w3-margin-bottom">
+            <div class="w3-display-container">
+              <img src="placeholder.jpg" alt="House" style="width: 100%" />
+            </div>
+          </div>
+          <div class="w3-col l3 m6 w3-margin-bottom">
+            <div class="w3-display-container">
+              <img src="placeholder.jpg" alt="House" style="width: 100%" />
+            </div>
+          </div>
+          <div class="w3-col l3 m6 w3-margin-bottom">
+            <div class="w3-display-container">
+              <img src="placeholder.jpg" alt="House" style="width: 100%" />
+            </div>
+          </div>
+          <div class="w3-col l3 m6 w3-margin-bottom">
+            <div class="w3-display-container">
+              <img src="placeholder.jpg" alt="House" style="width: 100%" />
+            </div>
           </div>
         </div>
-        <div class="w3-col l3 m6 w3-margin-bottom">
-          <div class="w3-display-container">
-            <div class="w3-display-topleft w3-black w3-padding">Job 7</div>
-            <img src="placeholder.jpg" alt="House" style="width: 99%" />
+
+        <div class="w3-row-padding">
+          <div class="w3-col l3 m6 w3-margin-bottom">
+            <div class="w3-display-container">
+              <img src="placeholder.jpg" alt="House" style="width: 99%" />
+            </div>
+          </div>
+          <div class="w3-col l3 m6 w3-margin-bottom">
+            <div class="w3-display-container">
+              <img src="placeholder.jpg" alt="House" style="width: 99%" />
+            </div>
+          </div>
+          <div class="w3-col l3 m6 w3-margin-bottom">
+            <div class="w3-display-container">
+              <img src="placeholder.jpg" alt="House" style="width: 99%" />
+            </div>
+          </div>
+          <div class="w3-col l3 m6 w3-margin-bottom">
+            <div class="w3-display-container">
+              <img src="placeholder.jpg" alt="House" style="width: 99%" />
+            </div>
           </div>
         </div>
-        <div class="w3-col l3 m6 w3-margin-bottom">
-          <div class="w3-display-container">
-            <div class="w3-display-topleft w3-black w3-padding">Job 8</div>
-            <img src="placeholder.jpg" alt="House" style="width: 99%" />
-          </div>
-        </div>
-      </div>
       </section>
 
       <!-- About Section -->
       <section id="about" name="about">
-      <div class="w3-container w3-padding-32">
-        <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">
-          About
-        </h3>
-        <p>
-          Degree Control Mechanical Ltd. is a HVAC-R company. Provide
-          installation and repairing services.
-        </p>
-      </div>
+        <div class="w3-container w3-padding-32">
+          <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">
+            About
+          </h3>
+        </div>
 
-      <div class="w3-row-padding w3-grayscale">
-        <div class="w3-col l3 m6 w3-margin-bottom">
-          <img src="placeholder.jpg" alt="John" style="width: 100%" />
-          <h3>Sukhchain New Mechanic</h3>
-          <p class="w3-opacity">Owner</p>
-          <p></p>
-          <p>
-            <button class="w3-button w3-light-grey w3-block">Contact</button>
-          </p>
+        <div class="w3-row-padding">
+          <div class="w3-col l9 m6 w3-margin-bottom">
+            <p>
+              Degree Control Mechanical Ltd. is a HVAC-R company. Provide
+              installation and repairing services.
+            </p>
+          </div>
+          <div class="w3-col l3 m6 w3-margin-bottom">
+            <img src="placeholder.jpg" alt="Jane" style="width: 100%" />
+            <h3>Sukhchain New Mechanic</h3>
+            <p class="w3-opacity">Owner</p>
+            <p></p>
+          </div>
         </div>
-        <div class="w3-col l3 m6 w3-margin-bottom">
-          <img src="placeholder.jpg" alt="Jane" style="width: 100%" />
-          <h3>Sukhchain New Mechanic</h3>
-          <p class="w3-opacity">Owner</p>
-          <p></p>
-          <p>
-            <button class="w3-button w3-light-grey w3-block">Contact</button>
-          </p>
-        </div>
-        <div class="w3-col l3 m6 w3-margin-bottom">
-          <img src="placeholder.jpg" alt="Mike" style="width: 100%" />
-          <h3>Sukhchain New Mechanic</h3>
-          <p class="w3-opacity">Owner</p>
-          <p></p>
-          <p>
-            <button class="w3-button w3-light-grey w3-block">Contact</button>
-          </p>
-        </div>
-        <div class="w3-col l3 m6 w3-margin-bottom">
-          <img src="placeholder.jpg" alt="Dan" style="width: 100%" />
-          <h3>Sukhchain New Mechanic</h3>
-          <p class="w3-opacity">Owner</p>
-          <p></p>
-          <p>
-            <button class="w3-button w3-light-grey w3-block">Contact</button>
-          </p>
-        </div>
-      </div>
       </section>
 
       <!-- Contact Section -->
-      <section id="contact" name="contact">
-      <div class="w3-container w3-padding-32" id="contact">
-        <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">
-          Contact
-        </h3>
-        <p>Let's get in touch and talk about your next project.</p>
-        <form id="contact_form">
-          <input
-            class="w3-input w3-border"
-            type="text"
-            placeholder="Name"
-            required
-            name="from_name"
-            id="from_name"
-          />
-          <input
-            class="w3-input w3-section w3-border"
-            type="text"
-            placeholder="Email"
-            required
-            name="from_email"
-            id="from_email"
-          />
-          <input
-            class="w3-input w3-section w3-border"
-            type="text"
-            placeholder="Subject"
-            required
-            name="subject"
-            id="subject"
-          />
-          <input
-            class="w3-input w3-section w3-border"
-            type="text"
-            placeholder="Message"
-            required
-            name="message"
-            id="message"
-          />
-          <input
-            id="contact_form_button"
-            class="w3-button w3-black w3-section"
-            type="submit"
-            value="SEND MESSAGE"
-          />
-        </form>
-        <div id="send_message"></div>
-      </div>
+      <section id="form" name="form">
+        <div class="w3-row-padding w3-grayscale">
+          <div class="w3-col l6 m6">
+            <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">
+              Service Request
+            </h3>
+            <iframe
+              width="100%"
+              height="480px"
+              src="https://forms.office.com/Pages/ResponsePage.aspx?id=LMq_2zwsek2smnY0jQ_bpqR-55tQsSRPiiyJHJGSMD9UNkdWNUVPNko3TUxPV04zQzQzQksyTVkzQS4u&embed=true"
+              frameborder="0"
+              marginwidth="0"
+              marginheight="0"
+              style="border: none; max-width: 100%; max-height: 100vh"
+              allowfullscreen
+              webkitallowfullscreen
+              mozallowfullscreen
+              msallowfullscreen
+            >
+            </iframe>
+          </div>
+          <div class="w3-col l6 m6">
+            <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">
+              Contact
+            </h3>
+            <p>Leave a message if you want to talk about something else!</p>
+            <form id="contact_form">
+              <input
+                class="w3-input w3-border"
+                type="text"
+                placeholder="Name"
+                required
+                name="from_name"
+                id="from_name"
+              />
+              <input
+                class="w3-input w3-section w3-border"
+                type="email"
+                placeholder="Email"
+                required
+                name="from_email"
+                id="from_email"
+              />
+              <input
+                class="w3-input w3-section w3-border"
+                type="text"
+                placeholder="Subject"
+                required
+                name="subject"
+                id="subject"
+              />
+              <textarea
+                class="w3-input w3-section w3-border"
+                rows="5"
+                placeholder="Message"
+                required
+                name="message"
+                id="message"
+              ></textarea>
+              <input
+                id="contact_form_button"
+                class="w3-button w3-black w3-section"
+                type="submit"
+                value="SEND MESSAGE"
+              />
+            </form>
+            <div id="send_message"></div>
+          </div>
+        </div>
       </section>
 
       <!-- Image of location/map -->
@@ -226,12 +301,63 @@
     </div>
 
     <!-- Footer -->
-    <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
-      <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook w3-hover-opacity"></i></a>
-      <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram w3-hover-opacity"></i></a>
-      <a href="https://ca.linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin-in w3-hover-opacity"></i></a>
-      <a href="https://x.com/x" target="_blank"><i class="fa-brands fa-x-twitter w3-hover-opacity"></i></a>
-      <p class="w3-medium">Disclaimer: ...</p>
+    <footer
+      class="w3-row-padding w3-padding-32 w3-center w3-opacity w3-light-grey w3-xlarge"
+    >
+      <div class="w3-third">
+        <h3>DISCLAIMER</h3>
+        <p>
+          This is a disclaimer.
+        </p>
+        <p>© 2024 All Rights Reserved.</p>
+      </div>
+
+      <div class="w3-third">
+        <h3>BLOG POSTS</h3>
+        <ul class="w3-ul w3-hoverable">
+          <li>
+            <button class="w3-button" onclick="scrolltofunc('projects')">
+              Projects
+            </button>
+          </li>
+          <li class="w3-padding-16">
+            <button class="w3-button" onclick="scrolltofunc('brands')">
+              Brands
+            </button>
+          </li>
+          <li class="w3-padding-16">
+            <button class="w3-button" onclick="scrolltofunc('about')">
+              About
+            </button>
+          </li>
+          <li class="w3-padding-16">
+            <button class="w3-button" onclick="scrolltofunc('form')">
+              Contact
+            </button>
+          </li>
+          <li class="w3-padding-16">
+            <button class="w3-button" onclick="scrolltofunc('form')">
+              Request
+            </button>
+          </li>
+        </ul>
+      </div>
+
+      <div class="w3-third w3-serif">
+        <h3>CONNECT</h3>
+        <a href="https://www.facebook.com/" target="_blank"
+          ><i class="fa-brands fa-facebook w3-hover-opacity"></i
+        ></a>
+        <a href="https://www.instagram.com/" target="_blank"
+          ><i class="fa-brands fa-instagram w3-hover-opacity"></i
+        ></a>
+        <a href="https://ca.linkedin.com/" target="_blank"
+          ><i class="fa-brands fa-linkedin-in w3-hover-opacity"></i
+        ></a>
+        <a href="https://x.com/x" target="_blank"
+          ><i class="fa-brands fa-x-twitter w3-hover-opacity"></i
+        ></a>
+      </div>
     </footer>
   </body>
 
