Update for test

--- a/index.html
+++ b/index.html
@@ -345,13 +345,13 @@
 
       <div class="w3-third w3-serif">
         <h3>CONNECT</h3>
-        <a href="https://www.facebook.com/" target="_blank"
+        <a href="https://www.facebook.com/Degreecontrolmechanical" target="_blank"
           ><i class="fa-brands fa-facebook w3-hover-opacity"></i
         ></a>
-        <a href="https://www.instagram.com/" target="_blank"
+        <a href="https://www.instagram.com/degreecontrolmechanical/" target="_blank"
           ><i class="fa-brands fa-instagram w3-hover-opacity"></i
         ></a>
-        <a href="https://ca.linkedin.com/" target="_blank"
+        <a href="https://www.linkedin.com/company/degree-control-mechanical-ltd" target="_blank"
           ><i class="fa-brands fa-linkedin-in w3-hover-opacity"></i
         ></a>
         <a href="https://x.com/x" target="_blank"
