Update for test

--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
       />
       <div class="w3-display-middle w3-margin-top w3-center">
         <h1 class="w3-xxlarge w3-text-white">
-          <span class="w3-padding w3-black w3-opacity-min"><b>DCM</b></span>
+          <span class="w3-padding w3-light-grey w3-opacity-min"><b>DCM</b></span>
           <span class="w3-hide-small w3-text-light-grey"
-            >Degree Control Mechanical</span
+            ><strong>Degree Control Mechanical</strong></span
           >
         </h1>
       </div>
@@ -89,25 +89,25 @@
         <div class="w3-row-padding">
           <div class="w3-col l3 m6 w3-margin-bottom">
             <div class="w3-display-container">
-              <div class="w3-display-topleft w3-black w3-padding">Job 1</div>
+              <strong class="w3-display-topleft w3-light-grey w3-padding">Job 1</strong>
               <img src="placeholder.jpg" alt="House" style="width: 100%" />
             </div>
           </div>
           <div class="w3-col l3 m6 w3-margin-bottom">
             <div class="w3-display-container">
-              <div class="w3-display-topleft w3-black w3-padding">Job 2</div>
+              <strong class="w3-display-topleft w3-light-grey w3-padding">Job 2</strong>
               <img src="placeholder.jpg" alt="House" style="width: 100%" />
             </div>
           </div>
           <div class="w3-col l3 m6 w3-margin-bottom">
             <div class="w3-display-container">
-              <div class="w3-display-topleft w3-black w3-padding">Job 3</div>
+              <strong class="w3-display-topleft w3-light-grey w3-padding">Job 3</strong>
               <img src="placeholder.jpg" alt="House" style="width: 100%" />
             </div>
           </div>
           <div class="w3-col l3 m6 w3-margin-bottom">
             <div class="w3-display-container">
-              <div class="w3-display-topleft w3-black w3-padding">Job 4</div>
+              <strong class="w3-display-topleft w3-light-grey w3-padding">Job 4</strong>
               <img src="placeholder.jpg" alt="House" style="width: 100%" />
             </div>
           </div>
@@ -116,25 +116,25 @@
         <div class="w3-row-padding">
           <div class="w3-col l3 m6 w3-margin-bottom">
             <div class="w3-display-container">
-              <div class="w3-display-topleft w3-black w3-padding">Job 5</div>
+              <strong class="w3-display-topleft w3-light-grey w3-padding">Job 5</strong>
               <img src="placeholder.jpg" alt="House" style="width: 99%" />
             </div>
           </div>
           <div class="w3-col l3 m6 w3-margin-bottom">
             <div class="w3-display-container">
-              <div class="w3-display-topleft w3-black w3-padding">Job 6</div>
+              <strong class="w3-display-topleft w3-light-grey w3-padding">Job 6</strong>
               <img src="placeholder.jpg" alt="House" style="width: 99%" />
             </div>
           </div>
           <div class="w3-col l3 m6 w3-margin-bottom">
             <div class="w3-display-container">
-              <div class="w3-display-topleft w3-black w3-padding">Job 7</div>
+              <strong class="w3-display-topleft w3-light-grey w3-padding">Job 7</strong>
               <img src="placeholder.jpg" alt="House" style="width: 99%" />
             </div>
           </div>
           <div class="w3-col l3 m6 w3-margin-bottom">
             <div class="w3-display-container">
-              <div class="w3-display-topleft w3-black w3-padding">Job 8</div>
+              <strong class="w3-display-topleft w3-light-grey w3-padding">Job 8</strong>
               <img src="placeholder.jpg" alt="House" style="width: 99%" />
             </div>
           </div>
@@ -207,14 +207,13 @@
         <div class="w3-row-padding">
           <div class="w3-col l9 m6 w3-margin-bottom">
             <p>
-              Degree Control Mechanical Ltd. is a HVAC-R company. Provide
-              installation and repairing services.
+              Welcome to Degree Control Mechanical Ltd, your trusted partner in HVAC solutions. Established in 2023, we specialize in providing top-notch service and new installations for heating, ventilation, and air conditioning systems. Our team is committed to delivering high-quality work with a focus on affordability and customer satisfaction. Whether you're looking to upgrade your current system or need reliable maintenance, we're here to ensure your environment stays comfortable year-round.
             </p>
           </div>
           <div class="w3-col l3 m6 w3-margin-bottom">
             <img src="placeholder.jpg" alt="Jane" style="width: 100%" />
-            <h3>Sukhchain New Mechanic</h3>
-            <p class="w3-opacity">Owner</p>
+            <h3>Sukhchain</h3>
+            <p class="w3-opacity">Owner & Lead Technician</p>
             <p></p>
           </div>
         </div>
@@ -222,11 +221,12 @@
 
       <!-- Contact Section -->
       <section id="form" name="form">
-        <div class="w3-row-padding w3-grayscale">
           <div class="w3-col l6 m6">
-            <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">
-              Service Request
-            </h3>
+            <div class="w3-container w3-padding-32">
+              <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">
+                Request
+              </h3>
+            </div>
             <iframe
               width="100%"
               height="480px"
@@ -243,9 +243,11 @@
             </iframe>
           </div>
           <div class="w3-col l6 m6">
-            <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">
-              Contact
-            </h3>
+            <div class="w3-container w3-padding-32">
+              <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">
+                Contact
+              </h3>
+            </div>
             <p>Leave a message if you want to talk about something else!</p>
             <form id="contact_form">
               <input
@@ -289,16 +291,29 @@
             </form>
             <div id="send_message"></div>
           </div>
-        </div>
       </section>
-
-      <!-- Image of location/map -->
-      <div class="w3-container">
-        <img src="placeholder.jpg" class="w3-image" style="width: 100%" />
-      </div>
 
       <!-- End page content -->
     </div>
+
+    <header
+      class="w3-display-container w3-content w3-wide"
+      style="max-width: 1500px"
+      id="home"
+    >
+      <img
+        class="w3-image"
+        src="placeholder.jpg"
+        alt="Architecture"
+        width="1500"
+        height="800"
+      />
+      <div class="w3-display-middle w3-margin-top w3-center">
+        <h1 class="w3-xxlarge w3-text-white">
+          <span class="w3-padding w3-light-grey w3-opacity-min"><b>Placeholder</b></span>
+        </h1>
+      </div>
+    </header>
 
     <!-- Footer -->
     <footer
