Update for test

--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
       />
       <div class="w3-display-middle w3-margin-top w3-center">
         <h1 class="w3-xxlarge w3-text-white">
-          <span class="w3-padding w3-light-grey w3-opacity-min"><b>DCM</b></span>
+          <span class="w3-padding w3-light-grey w3-opacity-min"
+            ><b>DCM</b></span
+          >
           <span class="w3-hide-small w3-text-light-grey"
             ><strong>Degree Control Mechanical</strong></span
           >
@@ -89,25 +91,33 @@
         <div class="w3-row-padding">
           <div class="w3-col l3 m6 w3-margin-bottom">
             <div class="w3-display-container">
-              <strong class="w3-display-topleft w3-light-grey w3-padding">Job 1</strong>
+              <strong class="w3-display-topleft w3-light-grey w3-padding"
+                >Job 1</strong
+              >
               <img src="placeholder.jpg" alt="House" style="width: 100%" />
             </div>
           </div>
           <div class="w3-col l3 m6 w3-margin-bottom">
             <div class="w3-display-container">
-              <strong class="w3-display-topleft w3-light-grey w3-padding">Job 2</strong>
+              <strong class="w3-display-topleft w3-light-grey w3-padding"
+                >Job 2</strong
+              >
               <img src="placeholder.jpg" alt="House" style="width: 100%" />
             </div>
           </div>
           <div class="w3-col l3 m6 w3-margin-bottom">
             <div class="w3-display-container">
-              <strong class="w3-display-topleft w3-light-grey w3-padding">Job 3</strong>
+              <strong class="w3-display-topleft w3-light-grey w3-padding"
+                >Job 3</strong
+              >
               <img src="placeholder.jpg" alt="House" style="width: 100%" />
             </div>
           </div>
           <div class="w3-col l3 m6 w3-margin-bottom">
             <div class="w3-display-container">
-              <strong class="w3-display-topleft w3-light-grey w3-padding">Job 4</strong>
+              <strong class="w3-display-topleft w3-light-grey w3-padding"
+                >Job 4</strong
+              >
               <img src="placeholder.jpg" alt="House" style="width: 100%" />
             </div>
           </div>
@@ -116,25 +126,33 @@
         <div class="w3-row-padding">
           <div class="w3-col l3 m6 w3-margin-bottom">
             <div class="w3-display-container">
-              <strong class="w3-display-topleft w3-light-grey w3-padding">Job 5</strong>
+              <strong class="w3-display-topleft w3-light-grey w3-padding"
+                >Job 5</strong
+              >
               <img src="placeholder.jpg" alt="House" style="width: 99%" />
             </div>
           </div>
           <div class="w3-col l3 m6 w3-margin-bottom">
             <div class="w3-display-container">
-              <strong class="w3-display-topleft w3-light-grey w3-padding">Job 6</strong>
+              <strong class="w3-display-topleft w3-light-grey w3-padding"
+                >Job 6</strong
+              >
               <img src="placeholder.jpg" alt="House" style="width: 99%" />
             </div>
           </div>
           <div class="w3-col l3 m6 w3-margin-bottom">
             <div class="w3-display-container">
-              <strong class="w3-display-topleft w3-light-grey w3-padding">Job 7</strong>
+              <strong class="w3-display-topleft w3-light-grey w3-padding"
+                >Job 7</strong
+              >
               <img src="placeholder.jpg" alt="House" style="width: 99%" />
             </div>
           </div>
           <div class="w3-col l3 m6 w3-margin-bottom">
             <div class="w3-display-container">
-              <strong class="w3-display-topleft w3-light-grey w3-padding">Job 8</strong>
+              <strong class="w3-display-topleft w3-light-grey w3-padding"
+                >Job 8</strong
+              >
               <img src="placeholder.jpg" alt="House" style="width: 99%" />
             </div>
           </div>
@@ -207,7 +225,14 @@
         <div class="w3-row-padding">
           <div class="w3-col l9 m6 w3-margin-bottom">
             <p>
-              Welcome to Degree Control Mechanical Ltd, your trusted partner in HVAC solutions. Established in 2023, we specialize in providing top-notch service and new installations for heating, ventilation, and air conditioning systems. Our team is committed to delivering high-quality work with a focus on affordability and customer satisfaction. Whether you're looking to upgrade your current system or need reliable maintenance, we're here to ensure your environment stays comfortable year-round.
+              Welcome to Degree Control Mechanical Ltd, your trusted partner in
+              HVAC solutions. Established in 2023, we specialize in providing
+              top-notch service and new installations for heating, ventilation,
+              and air conditioning systems. Our team is committed to delivering
+              high-quality work with a focus on affordability and customer
+              satisfaction. Whether you're looking to upgrade your current
+              system or need reliable maintenance, we're here to ensure your
+              environment stays comfortable year-round.
             </p>
           </div>
           <div class="w3-col l3 m6 w3-margin-bottom">
@@ -221,12 +246,13 @@
 
       <!-- Contact Section -->
       <section id="form" name="form">
-          <div class="w3-col l6 m6">
-            <div class="w3-container w3-padding-32">
-              <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">
-                Request
-              </h3>
-            </div>
+        <div class="w3-col l6 m6">
+          <div class="w3-container w3-padding-32">
+            <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">
+              Request
+            </h3>
+          </div>
+          <div class="w3-container w3-padding-16">
             <iframe
               width="100%"
               height="480px"
@@ -242,12 +268,14 @@
             >
             </iframe>
           </div>
-          <div class="w3-col l6 m6">
-            <div class="w3-container w3-padding-32">
-              <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">
-                Contact
-              </h3>
-            </div>
+        </div>
+        <div class="w3-col l6 m6">
+          <div class="w3-container w3-padding-32">
+            <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">
+              Contact
+            </h3>
+          </div>
+          <div class="w3-container w3-padding-16">
             <p>Leave a message if you want to talk about something else!</p>
             <form id="contact_form">
               <input
@@ -291,6 +319,7 @@
             </form>
             <div id="send_message"></div>
           </div>
+        </div>
       </section>
 
       <!-- End page content -->
@@ -310,7 +339,9 @@
       />
       <div class="w3-display-middle w3-margin-top w3-center">
         <h1 class="w3-xxlarge w3-text-white">
-          <span class="w3-padding w3-light-grey w3-opacity-min"><b>Placeholder</b></span>
+          <span class="w3-padding w3-light-grey w3-opacity-min"
+            ><b>Placeholder</b></span
+          >
         </h1>
       </div>
     </header>
@@ -321,9 +352,7 @@
     >
       <div class="w3-third">
         <h3>DISCLAIMER</h3>
-        <p>
-          This is a disclaimer.
-        </p>
+        <p>This is a disclaimer.</p>
         <p>© 2024 All Rights Reserved.</p>
       </div>
 
@@ -360,13 +389,19 @@
 
       <div class="w3-third w3-serif">
         <h3>CONNECT</h3>
-        <a href="https://www.facebook.com/Degreecontrolmechanical" target="_blank"
+        <a
+          href="https://www.facebook.com/Degreecontrolmechanical"
+          target="_blank"
           ><i class="fa-brands fa-facebook w3-hover-opacity"></i
         ></a>
-        <a href="https://www.instagram.com/degreecontrolmechanical/" target="_blank"
+        <a
+          href="https://www.instagram.com/degreecontrolmechanical/"
+          target="_blank"
           ><i class="fa-brands fa-instagram w3-hover-opacity"></i
         ></a>
-        <a href="https://www.linkedin.com/company/degree-control-mechanical-ltd" target="_blank"
+        <a
+          href="https://www.linkedin.com/company/degree-control-mechanical-ltd"
+          target="_blank"
           ><i class="fa-brands fa-linkedin-in w3-hover-opacity"></i
         ></a>
         <a href="https://x.com/x" target="_blank"
